# simple-repository-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
simple_repository_generator/: __init__.py  __main__.py  _api.py  _flat.py  _html.py  _mirroring.py  _writer.py
simple_repository_generator/tests/: test_dump.py  test_html.py  test_mirroring.py  test_simple_repository_generator.py
