[build-system]
requires = ["setuptools", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-repository-generator"
dynamic = [
  "version",  # The version is taken directly from the repository, using setuptools-scm.
]
# description = "<Insert short description of the project>"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
authors = [
  { name = "Phil Elson", email = "philip.elson@cern.ch" },
]
# Specify the minimum Python version required. It is not safe to use
# this to control the *upper* version of Python.
requires-python = ">=3.11"

# The core dependencies of the project.
dependencies = [
  "simple-repository",
  "packaging",
]

[project.scripts]
simple-repository-generator = "simple_repository_generator.__main__:main"

[project.optional-dependencies]
# The optional dependencies of the project, installable using the "extras" syntax.
test = [
  "pytest",
]
doc = [
]
dev = [
  # Dependencies for development of the project, such as type checkers,
  # linters, etc.
  # "requirement-for-development-purposes-only",

  # Include the "test" and "doc" dependencies in the dev dependencies.
  "simple-repository-generator[doc,test]",
]

[project.urls]
# Homepage = "<Insert your URL>"
# Repository = "<Insert your URL>"

[tool.setuptools.packages.find]
include = ["simple_repository_generator", "simple_repository_generator.*"]

[tool.setuptools.package-data]
# All package data which is tracked by git is included automatically due to
# include-package-data=true (the default) along with setuptools-scm. More details at:
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html#include-package-data

[tool.setuptools_scm]
# Tell setuptools_scm to write a _version.py file in the package. The
# _version.py file must not be committed to the repository.
version_file = "simple_repository_generator/_version.py"

[tool.acc_py_template]
features = [
  {name = "core", version = 2},
]
